Update library properties info, declare version 1.1.1

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=AVRfix
-version=1.0
-author=foo <bar>, baz <yada>
-maintainer=Sean Murphy <duck>
+version=1.1.1
+author=Maximilan Rosenblattl, Andreas Wolf, Sean Murphy
+maintainer=Sean Murphy <duckythescientist>
 sentence=Fixed Point Library for Atmel 8 bit Processors
-paragraph=
-category=Math
-url=http://example.com/
+paragraph=Implements ISO/IEC standard s7.8, s15.16, s7.24 floating point math.
+category=Other
+url=https://github.com/duckythescientist/avrfix
 architectures=avr
 dot_a_linkage=true
